// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConflictNotice theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <section
    class="rh-card rh-card--raised rh-card--pad-sm rh-conflict-notice"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-conflict-notice__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          Accepted state was used
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-contested"
        data-status="contested"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Contested
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-conflict-notice__explanation"
      >
        A message in this session contradicts an accepted claim. The accepted claim was sent to the model; the message was not.
      </p>
      <div
        class="rh-conflict-notice__sides"
      >
        <div
          class="rh-conflict-notice__side"
          data-side="accepted"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span>
              Accepted — sent to the model
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            The reviewed threshold is 5 kPa, qualified to 3D cultures.
          </blockquote>
        </div>
        <div
          class="rh-conflict-notice__side"
          data-side="chat"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span>
              From this conversation — not used
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-kind="message"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon rh-entity-ref__kind"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              M0042
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Assistant, 3 September
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            Earlier we agreed the threshold was 2 kPa.
          </blockquote>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ConflictNotice theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <section
    class="rh-card rh-card--raised rh-card--pad-sm rh-conflict-notice"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-conflict-notice__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          Accepted state was used
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-contested"
        data-status="contested"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Contested
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-conflict-notice__explanation"
      >
        A message in this session contradicts an accepted claim. The accepted claim was sent to the model; the message was not.
      </p>
      <div
        class="rh-conflict-notice__sides"
      >
        <div
          class="rh-conflict-notice__side"
          data-side="accepted"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span>
              Accepted — sent to the model
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            The reviewed threshold is 5 kPa, qualified to 3D cultures.
          </blockquote>
        </div>
        <div
          class="rh-conflict-notice__side"
          data-side="chat"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span>
              From this conversation — not used
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-kind="message"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon rh-entity-ref__kind"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              M0042
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Assistant, 3 September
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            Earlier we agreed the threshold was 2 kPa.
          </blockquote>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ConflictNotice theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <section
    class="rh-card rh-card--raised rh-card--pad-sm rh-conflict-notice"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-conflict-notice__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          Accepted state was used
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-contested"
        data-status="contested"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Contested
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-conflict-notice__explanation"
      >
        A message in this session contradicts an accepted claim. The accepted claim was sent to the model; the message was not.
      </p>
      <div
        class="rh-conflict-notice__sides"
      >
        <div
          class="rh-conflict-notice__side"
          data-side="accepted"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span>
              Accepted — sent to the model
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            The reviewed threshold is 5 kPa, qualified to 3D cultures.
          </blockquote>
        </div>
        <div
          class="rh-conflict-notice__side"
          data-side="chat"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span>
              From this conversation — not used
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-kind="message"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon rh-entity-ref__kind"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              M0042
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Assistant, 3 September
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            Earlier we agreed the threshold was 2 kPa.
          </blockquote>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`ConflictNotice theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <section
    class="rh-card rh-card--raised rh-card--pad-sm rh-conflict-notice"
  >
    <div
      class="rh-card__header"
    >
      <span
        class="rh-conflict-notice__title"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span>
          Accepted state was used
        </span>
      </span>
      <span
        class="rh-badge rh-badge--sm rh-badge--status-contested"
        data-status="contested"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert rh-icon"
          data-icon="alert-triangle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <span
          class="rh-badge__label"
        >
          Contested
        </span>
      </span>
    </div>
    <div
      class="rh-card__body"
    >
      <p
        class="rh-conflict-notice__explanation"
      >
        A message in this session contradicts an accepted claim. The accepted claim was sent to the model; the message was not.
      </p>
      <div
        class="rh-conflict-notice__sides"
      >
        <div
          class="rh-conflict-notice__side"
          data-side="accepted"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-check rh-icon"
              data-icon="circle-check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m16 9-5.5 5.5L8 12"
              />
            </svg>
            <span>
              Accepted — sent to the model
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-authority="qualified"
            data-kind="claim"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale rh-icon rh-entity-ref__kind"
              data-icon="scale"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              C0041
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Stiffer gels shorten neurites
            </span>
            <span
              class="rh-badge rh-badge--sm rh-badge--status-qualified rh-authority-badge rh-entity-ref__authority"
              data-authority="qualified"
              data-status="qualified"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-info rh-icon"
                data-icon="info"
                fill="none"
                focusable="false"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M12 16v-4"
                />
                <path
                  d="M12 8h.01"
                />
              </svg>
              <span
                class="rh-badge__label"
              >
                Qualified
              </span>
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            The reviewed threshold is 5 kPa, qualified to 3D cultures.
          </blockquote>
        </div>
        <div
          class="rh-conflict-notice__side"
          data-side="chat"
        >
          <p
            class="rh-conflict-notice__side-label"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span>
              From this conversation — not used
            </span>
          </p>
          <span
            class="rh-entity-ref rh-entity-ref--sm"
            data-kind="message"
            data-resolution="resolved"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-message-square rh-icon rh-entity-ref__kind"
              data-icon="message-square"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
              />
            </svg>
            <span
              class="rh-entity-ref__id"
            >
              M0042
            </span>
            <span
              class="rh-entity-ref__label"
            >
              Assistant, 3 September
            </span>
          </span>
          <blockquote
            class="rh-conflict-notice__excerpt"
          >
            Earlier we agreed the threshold was 2 kPa.
          </blockquote>
        </div>
      </div>
    </div>
  </section>
</div>
`;
